# backend-1-kubernetes

./: .env  .env.dev  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  README.md  docker-compose-backend.yaml  docker-compose.yaml
.sqlx/: query-40e5b26d2df5aa2cc92c1a45c47560092b4cbb50dd1aa24320afc6a729f16cfe.json  query-c44bf551e18792a1c3b1282508cedf2c4b519f11aa8d637caa06d048ebad3aeb.json
migrations/: 20250818015719_initial.sql
src/: database.rs  entities.rs  main.rs
